[gd_scene load_steps=11 format=3 uid="uid://cvmsg341orw7t"]

[ext_resource type="Script" uid="uid://bfsd14nj2olsg" path="res://Codes/strike_sequence.gd" id="1_in6yn"]
[ext_resource type="Texture2D" uid="uid://cw2jkbd30q515" path="res://Assets/Images/Characters/pattern and timer.png" id="2_q1y4x"]
[ext_resource type="Texture2D" uid="uid://c416l0ip3r0ck" path="res://Assets/Images/Sequence/crown.png" id="2_v2o1c"]
[ext_resource type="FontFile" uid="uid://240nam2whnsy" path="res://Assets/Fonts/Pixellari.ttf" id="4_bva0h"]
[ext_resource type="Texture2D" uid="uid://c3m5o1i6i6mra" path="res://Assets/Images/Sequence/left temple.png" id="5_bva0h"]
[ext_resource type="Texture2D" uid="uid://loqfqimrqgfd" path="res://Assets/Images/Sequence/left leg.png" id="6_m06q6"]
[ext_resource type="Texture2D" uid="uid://buhwfsg4k4363" path="res://Assets/Images/Sequence/stomach.png" id="7_2e8o2"]
[ext_resource type="Texture2D" uid="uid://cr2o0x710dduq" path="res://Assets/Images/Sequence/right temple.png" id="8_50qh0"]
[ext_resource type="Texture2D" uid="uid://b0jsrnx2itbfr" path="res://Assets/Images/Sequence/right leg.png" id="9_30wvf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6000x"]

[node name="StrikeSequence" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_in6yn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(323, 91)
scale = Vector2(2.0625, 2.0625)
texture = ExtResource("2_q1y4x")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -437.0
offset_top = 33.0
offset_right = 13.0
offset_bottom = 123.0
grow_horizontal = 2
scale = Vector2(1.1, 1.1)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_6000x")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_v2o1c")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_v2o1c")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_v2o1c")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_v2o1c")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_v2o1c")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_v2o1c")
expand_mode = 1

[node name="Timer" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -511.5
offset_top = 59.0
offset_right = -454.5
offset_bottom = 126.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_bva0h")
theme_override_font_sizes/font_size = 70
text = "7"

[node name="Success_Fail" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -309.5
offset_top = 164.0
offset_right = -186.5
offset_bottom = 235.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_bva0h")
theme_override_font_sizes/font_size = 70
text = "Fail"

[node name="Timer2" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 7.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 809.0
offset_top = 407.0
offset_right = 841.0
offset_bottom = 475.0
scale = Vector2(3, 3)

[node name="Left Temple" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bva0h")

[node name="Left Leg" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_m06q6")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 913.0
offset_top = 351.0
offset_right = 945.0
offset_bottom = 419.0
scale = Vector2(3, 3)

[node name="Crown" type="TextureButton" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("2_v2o1c")

[node name="Stomach" type="TextureButton" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("7_2e8o2")

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 1017.0
offset_top = 407.0
offset_right = 1049.0
offset_bottom = 475.0
scale = Vector2(3, 3)

[node name="RightTemple" type="TextureButton" parent="CanvasLayer/VBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("8_50qh0")

[node name="RightLeg" type="TextureButton" parent="CanvasLayer/VBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("9_30wvf")

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Left Temple" to="." method="_on_left_temple_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Left Leg" to="." method="_on_left_leg_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/Crown" to="." method="_on_crown_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/Stomach" to="." method="_on_stomach_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer3/RightTemple" to="." method="_on_right_temple_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer3/RightLeg" to="." method="_on_right_leg_pressed"]
